@@ -306,6 +306,14 @@ name|phraseInfo
 argument_list|)
 expr_stmt|;
 name|int
+name|firstOffset
+init|=
+name|phraseInfo
+operator|.
+name|getStartOffset
+argument_list|()
+decl_stmt|;
+name|int
 name|st
 init|=
 name|phraseInfo
@@ -349,10 +357,14 @@ operator|.
 name|getEndOffset
 argument_list|()
 expr_stmt|;
-name|startOffset
-operator|=
-name|en
-expr_stmt|;
+name|int
+name|lastEndOffset
+init|=
+name|phraseInfo
+operator|.
+name|getEndOffset
+argument_list|()
+decl_stmt|;
 while|while
 condition|(
 literal|true
@@ -396,6 +408,7 @@ argument_list|()
 operator|<=
 name|en
 condition|)
+block|{
 name|wpil
 operator|.
 name|add
@@ -403,9 +416,64 @@ argument_list|(
 name|phraseInfo
 argument_list|)
 expr_stmt|;
+name|lastEndOffset
+operator|=
+name|phraseInfo
+operator|.
+name|getEndOffset
+argument_list|()
+expr_stmt|;
+block|}
 else|else
 break|break;
 block|}
+name|int
+name|matchLen
+init|=
+name|lastEndOffset
+operator|-
+name|firstOffset
+decl_stmt|;
+comment|//now recalculate the start and end position to "center" the result
+name|int
+name|newMargin
+init|=
+operator|(
+name|fragCharSize
+operator|-
+name|matchLen
+operator|)
+operator|/
+literal|2
+decl_stmt|;
+name|st
+operator|=
+name|firstOffset
+operator|-
+name|newMargin
+expr_stmt|;
+if|if
+condition|(
+name|st
+operator|<
+name|startOffset
+condition|)
+block|{
+name|st
+operator|=
+name|startOffset
+expr_stmt|;
+block|}
+name|en
+operator|=
+name|st
+operator|+
+name|fragCharSize
+expr_stmt|;
+name|startOffset
+operator|=
+name|en
+expr_stmt|;
 name|fieldFragList
 operator|.
 name|add
